src/test/resources/api/WEB-INF/jsp/error/json/501.jsp
{
	"status":"501",
	"title":"Not Implemented",
	"description": "The server either does not recognise the request method, or it lacks the ability to fulfill the request."
}
<%@ page contentType="application/json; charset=UTF-8"%>